--- a/src/styles/scss/_header.scss
+++ b/src/styles/scss/_header.scss
@@ -20,7 +20,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .site-title {
